Fix Account.css align button

--- a/src/components/Account/Account.css
+++ b/src/components/Account/Account.css
@@ -45,7 +45,7 @@
     display: block;
     width: 100%;
     font-size: 1.1rem;
-    margin-top: 1rem;
+    /* margin-top: 1rem; */
     padding: 8px;
 }
 
